# pascalbot-rs

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: main.rs  process.rs
src/api/: eight_ball.rs  eval.rs  mod.rs  roll.rs  version.rs  xkcd.rs
src/commands/: eight_ball.rs  eval.rs  mod.rs  roll.rs  version.rs  xkcd.rs
