[package]
name = "pascalbot-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
build = "build.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "fmt", "ansi"], default-features = false }
twilight-gateway = "0.15"
twilight-http = "0.15"
twilight-interactions = "0.15"
twilight-model = "0.15"
twilight-util = { version = "0.15", features = ["builder"] }
twilight-mention = "0.15"

# Calculator support
kalk = "3"

[build-dependencies]
vergen = { version = "8", features = ["build", "git", "gitcl"] }
